[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.90"
serde_derive = "1.0.90"
futures = "0.3.24"
thiserror = "1.0.38"
warp = "0.3.3"
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls","postgress"]}
sqlb = "0.0.8"
